# spongemock-cli

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
