[package]
name = "spongemock"
description = "A simple CLI tool to Spongemock-ify text."
version = "0.6.5"
license = "MIT"
repository = "https://github.com/Some-Dood/spongemock_cli"
authors = ["Basti Ortiz <ortizbasti16@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies.rand]
version = "0.8"
default-features = false
features = ["getrandom", "small_rng"]

[profile.release]
lto = true
